fixed img on safari

--- a/css/singleProject.css
+++ b/css/singleProject.css
@@ -24,14 +24,12 @@ body {
 }
 .singleProject_img {
   width: 100%;
-  height: -webkit-fill-available;
+  height: auto;
   margin-top: 20px;
 }
 .singleProject_imgFlex {
   width: 80%;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+  
 }
 .singleProject_text {
   width: 30%;
@@ -40,9 +38,7 @@ body {
   .singleProject_text {
     width: 80vw;
   }
-  .singleProject_img {
-    height: 100%;
-  }
+  
 }
 .singleProject_text h2, .singleProject_text p {
   display: block;
